# set-pdf-margins

./: LICENSE  README.md  pyproject.toml
.github/workflows/: autofix.yml  fix.yml
src/set_pdf_margins/: __init__.py  main.py
