[project]
name = "set-pdf-margins"
version = "0.1.0"
description = "Place user-defined margins around PDF page content"
readme = "README.md"
authors = [{ name = "Niklas Kappel" }]
requires-python = ">=3.10"
dependencies = ["pypdf>=6.2.0", "typer>=0.20.0"]

[project.scripts]
set-pdf-margins = "set_pdf_margins.main:app"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["pyright>=1.1.407", "ruff>=0.14.4"]
